#823 - Fixed Video poster image stretching while playing video

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_video.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_video.scss
@@ -71,6 +71,10 @@
 		pointer-events: none;
 	}
 
+	.video-js > video {
+		object-fit: cover;
+	}
+
 	.video-js.vjs-playing {
 
 		~ .bb-video-play,
